test/expected/explain_stftsrk_v.out
explain static void f( this S &self )
                              ^
31: error: function with "this" parameter can not be "static"
